# carrot-utils

./: .gitignore  CHANGES.md  Cargo.toml  changes.md
src/: ad.rs  af.rs  c.rs  case.rs  changes.md  changes.txt  col.rs  count.rs  div.rs  hl.rs  junk.rs  l.rs  lf.rs  lib.rs  lib2human.rs  lib2machine.rs  libargs.rs  libdir.rs  libinput.rs  loathe.rs  m.rs  md.rs  mv.rs  own.rs  p.rs  page.rs  perm.rs  rd.rs  rex.rs  rf.rs  rush.rs  s.rs  seek.rs  shrink.rs  sl.rs  split.rs  tr.rs  userutil.rs
