[package]
name = "carrot-utils"
version = "0.2.0"
edition = "2021"

[build]
rustflags=["-C prefer-dynamic"]

[profile.release]
strip = true
debug = false

[dependencies]
libc = "*"
rand = "0.8.4"
crossterm = "*"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"


[[bin]]
name = "ad"
path = "src/ad.rs"

[[bin]]
name = "af"
path = "src/af.rs"

[[bin]]
name = "c"
path = "src/c.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "hl"
path = "src/hl.rs"

[[bin]]
name = "l"
path = "src/l.rs"

[[bin]]
name = "loathe"
path = "src/loathe.rs"

[[bin]]
name = "m"
path = "src/m.rs"

[[bin]]
name = "md"
path = "src/md.rs"

[[bin]]
name = "own"
path = "src/own.rs"

[[bin]]
name = "p"
path = "src/p.rs"

[[bin]]
name = "perm"
path = "src/perm.rs"

[[bin]]
name = "rd"
path = "src/rd.rs"

[[bin]]
name = "rf"
path = "src/rf.rs"

[[bin]]
name = "rush"
path = "src/rush.rs"

[[bin]]
name = "seek"
path = "src/seek.rs"

[[bin]]
name = "sl"
path = "src/sl.rs"

[[sublib]]
name = "lib2human"
path = "src/lib2human.rs"

[[sublib]]
name = "lib2machine"
path = "src/lib2machine.rs"

[[sublib]]
name = "libargs"
path = "src/libargs.rs"

[[sublib]]
name = "libdir"
path = "src/libdir.rs"

[[sublib]]
name = "libfileinfo"
path = "src/libfileinfo.rs"

[[sublib]]
name = "libinput"
path = "src/libinput.rs"
