[package]
name = "carrot_utils"
version = "0.3.4"
edition = "2021"

[build]
rustflags=["-C prefer-dynamic"]

[profile.release]
strip = true
debug = false

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"

[dependencies]
libc = "*"
rand = "*"
crossterm = "*"
serde = "*"
serde_derive = "*"
confy = "*"
chrono = "*"

[dependencies.carrot_libs]
path = "../carrot-libs"

[[bin]]
name = "ad"
path = "src/ad.rs"

[[bin]]
name = "af"
path = "src/af.rs"

[[bin]]
name = "c"
path = "src/c.rs"

[[bin]]
name = "case"
path = "src/case.rs"

[[bin]]
name = "col"
path = "src/col.rs"

[[bin]]
name = "count"
path = "src/count.rs"

[[bin]]
name = "div"
path = "src/div.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "hl"
path = "src/hl.rs"

[[bin]]
name = "l"
path = "src/l.rs"

[[bin]]
name = "loathe"
path = "src/loathe.rs"

[[bin]]
name = "m"
path = "src/m.rs"

[[bin]]
name = "md"
path = "src/md.rs"

[[bin]]
name = "own"
path = "src/own.rs"

[[bin]]
name = "p"
path = "src/p.rs"

[[bin]]
name = "page"
path = "src/page.rs"

[[subbin]]
name = "page"
path = "src/page.rs"

[[bin]]
name = "perm"
path = "src/perm.rs"

[[bin]]
name = "rex"
path = "src/rex.rs"

[[bin]]
name = "rd"
path = "src/rd.rs"

[[bin]]
name = "rf"
path = "src/rf.rs"

[[bin]]
name = "shrink"
path = "src/shrink.rs"

[[bin]]
name = "sl"
path = "src/sl.rs"

[[bin]]
name = "split"
path = "src/split.rs"

[[bin]]
name = "tr"
path = "src/tr.rs"

[[sublib]]
name = "tr"
path = "src/tr.rs"

[[bin]]
name = "userutil"
path = "src/userutil.rs"
